# LieInt

./: CMakeLists.txt  README.md  intLie.h  intlie.cpp  lieGroup.h  lieSE2.cpp  lieSE2.h
src/: CMakeLists.txt  contract.cpp  contract.h  funcLie.cpp  funcLie.h  funcSE2.cpp  funcSE2.h  intExp.cpp  intExp.h  intTFunc.cpp  intTFunc.h  lieGroup.cpp  lieGroup.h  lieSE2.cpp  lieSE2.h  lieSO3.cpp  lieSO3.h
tests/: CMakeLists.txt  test_contract.cpp  test_intExp1.cpp  test_intTFunc.cpp  test_intTFunc_2.cpp  test_intTFunc_3.cpp  test_lieSE2.cpp  test_lieSE2_0.cpp  test_lieSE2_1.cpp  test_lieSO3_0.cpp
tests/integrationSE2/: integrate_SE2_0.cpp  integrate_SE2_1.cpp  integrate_SE2_2.cpp
tests/integrationSO3/: integrate_SO3_0.cpp  integrate_SO3_1.cpp  integrate_SO3_2.cpp
